data/all_generated_tests/raw_wast_tests/loop_IncorrectBranchTargetResolution_217.wast
;; 8. **Test Input: Loop with interleaved br**    - Description: Test a `loop` block interleaved with conditional `br_if` that should continue execution, but due to improper label resolution, it halts.    - Constraint: Ensure proper continuation of execution across conditionally branched loops.    - Focus: Verify that `br_if` respects the continuation semantics within loops.

(assert_invalid
  (module
    (func $loop-br-if (result i32)
      (i32.const 0)
      (loop (result i32) 
        (i32.const 1)
        (i32.const 1)
        (br_if 0)
      )
    )
  )
  "type mismatch"
)